SSC-XX Form, fix alignment title text (chosen)

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-form.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-form.less
@@ -188,14 +188,21 @@
             left: -10px;
         }
     }
+
     .countrycode {
         .with-errors {
             position: relative;
+
             .list-unstyled {
                 padding-left: 120px;
             }
         }
+    }
 
+    .input--title {
+        .chosen-single {
+            padding: 10px 40px 10px 20px;
+        }
     }
 }
 
